--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,4 +1,7 @@
 {
+    "code-runner.executorMap": {
+        "python": "clear, python -u"
+    },
     "tasks": [
         {
             "type": "cppbuild",
